--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-components/",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "react-components/ React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -17,7 +17,8 @@
     "start": "nwb serve-react-demo",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "test:watch": "nwb test-react --server",
+    "semantic-release": "semantic-release"
   },
   "peerDependencies": {
     "react": "16.x"
@@ -25,13 +26,20 @@
   "devDependencies": {
     "nwb": "0.25.x",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "semantic-release": "^19.0.2"
   },
   "author": "",
   "homepage": "",
   "license": "MIT",
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/habeebahmed/react-components.git"
+  },
   "keywords": [
     "react-component"
-  ]
+  ],
+  "dependencies": {
+    "semantic-release-cli": "^5.4.4"
+  }
 }
