--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-components/",
+  "name": "react-components",
   "version": "0.0.0-development",
   "description": "react-components/ React component",
   "main": "lib/index.js",
@@ -41,5 +41,8 @@
   ],
   "dependencies": {
     "semantic-release-cli": "^5.4.4"
+  },
+  "release": {
+    "branches": ["main"]
   }
 }
