--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,8 +40,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: source .env && node -p process.env.GITHUB_TOKEN
     - run: npm ci
     - run: npm run semantic-release
-    
+      env:
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
