--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "umd"
   ],
   "scripts": {
-    "build": "nwb build-react-component",
+    "build": "nwb build --copy-files --no-demo",
     "clean": "nwb clean-module && nwb clean-demo",
     "start": "nwb serve-react-demo",
     "test": "nwb test-react",
+    "prepublishOnly": "yarn run build",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
     "semantic-release": "semantic-release",
