--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "acp":"git add . && npm run commit && git push"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.x || ^17.x || ^18.x"
   },
   "devDependencies": {
     "commitizen": "^4.2.4",
